# reServ

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  simpleClient.html
doc/: basics.txt  formatter.txt  networking.txt
src/: clientConnection.hpp  clientMessage.hpp  closeCondition.hpp  configService.hpp  connection.hpp  enums.hpp  helper.hpp  helpers.hpp  logger.hpp  main.cpp  responseMessages.hpp  server.hpp  serverConfig.hpp  serverConnectionHandler.hpp  serverCore.hpp  serverInputHandler.hpp  serverMessageHandler.hpp  serverOutputHandler.hpp  types.hpp  wsConfig.hpp
test/: serverMessageHandler_tests.cpp  test_configservice.cpp  test_serverInputHandler.cpp  test_serverMessageHandler.cpp  test_types.cpp
test/autobahn/config/: fuzzingclient.json
test/autobahn/reports/servers/: index.html  index.json  reserv_case_1_1_1.html  reserv_case_1_1_1.json  reserv_case_1_1_2.html  reserv_case_1_1_2.json  reserv_case_1_1_3.html  reserv_case_1_1_3.json  reserv_case_1_1_4.html  reserv_case_1_1_4.json  reserv_case_1_1_5.html  reserv_case_1_1_5.json  reserv_case_1_1_6.html  reserv_case_1_1_6.json  reserv_case_1_1_7.html  reserv_case_1_1_7.json  reserv_case_1_1_8.html  reserv_case_1_1_8.json  reserv_case_1_2_1.html  reserv_case_1_2_1.json  reserv_case_1_2_2.html  reserv_case_1_2_2.json  reserv_case_1_2_3.html  reserv_case_1_2_3.json  reserv_case_1_2_4.html  reserv_case_1_2_4.json  reserv_case_1_2_5.html  reserv_case_1_2_5.json  reserv_case_1_2_6.html  reserv_case_1_2_6.json  reserv_case_1_2_7.html  reserv_case_1_2_7.json  reserv_case_1_2_8.html  reserv_case_1_2_8.json  reserv_case_7_1_1.html  reserv_case_7_1_1.json
